@@ -2,11 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.holidaystudios.vuknob"
 	  android:installLocation="auto"
-	  android:versionCode="60"
-      android:versionName="2.10"
+	  android:versionCode="61"
+      android:versionName="2.11"
  >
   <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.WAKE_LOCK" />
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.RECORD_AUDIO" />
